--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: [stairs]
-Description: [これは学生団体stairsの公式ホームページです。]
-logo: [stairs_square.png]
+title: stairs
+Description: これは学生団体stairsの公式ホームページです。
+logo: stairs_square.png
