--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: stairs
+title: 九州工業大学　学生団体stairs
 Description: これは学生団体stairsの公式ホームページです。
 logo: stairs_square.png
